<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/first_menu2"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="265dp"
            android:background="@drawable/shape5"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:background="@drawable/shape6"
                android:src="@drawable/first_description03"/>
            <ImageButton
                android:layout_marginLeft="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                android:src="@drawable/first_eyeoff"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/card_up"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginTop="10dp"
        android:onClick="onClick">
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="650dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/shape7">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="5dp"
                android:background="#AFAFAD"
                android:layout_marginTop="13dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="경복궁"
                android:textAlignment="center"
                android:textColor="#FF5D21"
                android:textSize="21dp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="개설"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#272727"/>
                <TextView
                    android:layout_marginTop="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info01" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info02" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info03" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info04" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="인원 및 변천"
                    android:layout_marginTop="18dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#272727"/>
                <TextView
                    android:layout_marginTop="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info05" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info06" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info07" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info08" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info09" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info10" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info11" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info12" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info13" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="435dp"
            android:orientation="vertical"
            android:weightSum="4">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="7"
                android:layout_weight="2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/first_btnfirst"
                    android:layout_marginTop="70dp"
                    android:layout_weight="1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1390's"
                        android:textSize="15dp"
                        android:textColor="#FF5D21"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shape3"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/first_btnsecond"
                    android:layout_marginTop="70dp"
                    android:layout_weight="1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1390's"
                        android:textSize="15dp"
                        android:textColor="#6C6C6C"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shape8"/>
                </LinearLayout>
                <ImageButton
                    android:layout_weight="3"
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shape1"
                    android:layout_marginTop="27dp"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:onClick="onClick"/>
                <LinearLayout
                    android:id="@+id/first_btnthird"
                    android:layout_marginTop="70dp"
                    android:layout_weight="1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1390's"
                        android:textSize="15dp"
                        android:textColor="#6C6C6C"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shape8"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/first_btnfourth"
                    android:layout_marginTop="70dp"
                    android:layout_weight="1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1390's"
                        android:textSize="15dp"
                        android:textColor="#6C6C6C"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shape8"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1.9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>